--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -88,6 +88,9 @@
       <setting name="changedLanguage" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="pipe" serializeAs="String">
+        <value>-1</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
