--- a/CustomRPC/packages.config
+++ b/CustomRPC/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonMark.NET" version="0.15.1" targetFramework="net48" />
   <package id="DiscordRichPresence" version="1.0.175" targetFramework="net48" />
   <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net471" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net471" />
