Autoconnect option, connection status preserved on language change, popup notification only shows once, reconnect on preset import, fixed changelog, added Indonesian

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -91,6 +91,15 @@
       <setting name="pipe" serializeAs="String">
         <value>-1</value>
       </setting>
+      <setting name="wasConnected" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="autoconnect" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="wasTooltipShown" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
