--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -81,6 +81,7 @@
       <HintPath>..\packages\Octokit.0.50.0\lib\net46\Octokit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
