Implemented analytics, tidied up MainForm.cs, migrated from packages.config to PackageReference

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -100,6 +100,9 @@
       <setting name="wasTooltipShown" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="analytics" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
