Added analytics consent dialog

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -103,6 +103,9 @@
       <setting name="analytics" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="analyticsAskedConsent" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
