Reconnects after fails will happen after 10 seconds instead of 5, limited to 30 tries, fixed analytics spamming dashboard on reconnects, added ConnectionState class

--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -86,6 +86,7 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConnectionState.cs" />
     <Compile Include="PipeSelector.cs">
       <SubType>Form</SubType>
     </Compile>
