--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,6 @@
 files:
-  - source: CustomRPC/*.resx
+  - source: /CustomRPC/*.resx
     ignore:
       - '*.*.resx'
       - PipeSelector.resx
-    translation: CustomRPC/%file_name%.%two_letters_code%.resx
+    translation: /CustomRPC/%file_name%.%two_letters_code%.resx
