--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -234,6 +234,9 @@
     <EmbeddedResource Include="ErrorReportViewer.lt.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ErrorReportViewer.nl.resx">
+      <DependentUpon>ErrorReportViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ErrorReportViewer.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
       <SubType>Designer</SubType>
