New UpdateHelper class with functions to get proper Version objects (without -1s) and proper version strings (without trailing zeros)

--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -112,6 +112,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
+    <Compile Include="UpdateHelper.cs" />
     <Compile Include="UpdatePrompt.cs">
       <SubType>Form</SubType>
     </Compile>
