Implemented dark mode, various code optimizations

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -106,6 +106,9 @@
       <setting name="analyticsAskedConsent" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="darkMode" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
