--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -268,6 +268,9 @@
     <EmbeddedResource Include="ErrorReportViewer.pl.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ErrorReportViewer.pt-BR.resx">
+      <DependentUpon>ErrorReportViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ErrorReportViewer.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
       <SubType>Designer</SubType>
