--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://yoomoney.ru/to/41001998922598', 'https://github.com/maximmax42/Discord-CustomRP/blob/master/CRYPTO.md'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://yoomoney.ru/to/41001998922598', 'https://www.customrp.xyz/crypto'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
