--- a/.github/workflows/winget.yml
+++ b/.github/workflows/winget.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: vedantmgoyal2009/winget-releaser@latest
         with:
           identifier: maximmax42.CustomRP
-          token: ${{ secrets.Winget }}
+          token: ${{ secrets.WINGET_TOKEN }}
